test/errors/type/list/join.yasl
mt.lookup([], .join)(1, .str)
